added base activity with drawer

--- a/app/src/main/res/layout/activity_cloth_creator.xml
+++ b/app/src/main/res/layout/activity_cloth_creator.xml
@@ -29,4 +29,10 @@
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
     </android.support.design.widget.CoordinatorLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="@dimen/nav_width"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"/>
 </android.support.v4.widget.DrawerLayout>
