--- a/app/src/main/res/layout/activity_cloth_creator.xml
+++ b/app/src/main/res/layout/activity_cloth_creator.xml
@@ -20,7 +20,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?attr/colorPrimary"
-                android:minHeight="?attr/actionBarSize" />
+                android:minHeight="?attr/actionBarSize" >
+
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:text="@string/app_name_caps"
+                    android:textColor="@android:color/black"
+                    android:textSize="24sp"/>
+                
+                <ImageView
+                    android:id="@+id/bucket"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_margin="8dp"
+                    android:layout_gravity="center_vertical|end"/>
+                </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
 
         <LinearLayout
