--- a/app/src/main/res/layout/holder_stepper.xml
+++ b/app/src/main/res/layout/holder_stepper.xml
@@ -8,29 +8,30 @@
     <pancor.pl.clothy.utils.ui.stepper.StepperView
         android:id="@+id/arrowView"
         android:layout_width="match_parent"
-        android:layout_height="35dp" />
+        android:layout_height="36dp" />
 
-    <TextView
-        android:id="@+id/stepCountView"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_toLeftOf="@+id/stepTextView"
-        android:layout_toStartOf="@+id/stepTextView"
-        android:textColor="@android:color/black"
-        android:textSize="12sp"
-        android:background="@drawable/rounded_rectangle"
-        android:layout_margin="4dp"
-        android:padding="2dp"
-        android:text="1"/>
+        android:orientation="horizontal"
+        android:layout_centerInParent="true">
 
-    <TextView
-        android:id="@+id/stepTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_margin="4dp"
-        android:textColor="@android:color/white"
-        android:textSize="12sp"
-        android:text="CHOOSE CUT"/>
+        <TextView
+            android:id="@+id/stepCountView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            android:textSize="12sp"
+            android:background="@drawable/rounded_rectangle"
+            android:layout_margin="4dp"
+            android:padding="2dp"/>
+
+        <TextView
+            android:id="@+id/stepTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:textColor="@android:color/white"
+            android:textSize="12sp"/>
+    </LinearLayout>
 </RelativeLayout>
