--- a/app/src/main/res/layout/activity_cloth_creator.xml
+++ b/app/src/main/res/layout/activity_cloth_creator.xml
@@ -55,6 +55,13 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"/>
 
+            <ImageView
+                android:id="@+id/clothImage"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_margin="8dp"
+                android:layout_gravity="center_horizontal"/>
+
             <android.support.v4.view.ViewPager
                 android:id="@+id/viewPager"
                 android:layout_width="match_parent"
