changes to ClothCreator interface

--- a/app/src/main/res/layout/activity_cloth_creator.xml
+++ b/app/src/main/res/layout/activity_cloth_creator.xml
@@ -42,6 +42,7 @@
         </android.support.design.widget.AppBarLayout>
 
         <LinearLayout
+            android:id="@+id/creatorLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -68,6 +69,13 @@
                 android:layout_height="match_parent" />
 
         </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
+
     </android.support.design.widget.CoordinatorLayout>
 
     <android.support.design.widget.NavigationView
